--- a/Pitch Perfect/Base.lproj/Main.storyboard
+++ b/Pitch Perfect/Base.lproj/Main.storyboard
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="FFU-4n-HYL">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--برنامج تسجيل الصوت-->
+        <!--Pitch Perfect-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="RecordSoundsViewController" customModule="Pitch_Perfect" customModuleProvider="target" sceneMemberID="viewController">
@@ -47,10 +48,10 @@
                                 <exclude reference="EH0-Jl-Fge"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="ccL-TN-YXG"/>
-                                <exclude reference="vOh-u7-ik4"/>
                                 <exclude reference="Gaa-uF-ESf"/>
                                 <exclude reference="hv9-af-rmK"/>
+                                <exclude reference="ccL-TN-YXG"/>
+                                <exclude reference="vOh-u7-ik4"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -59,14 +60,14 @@
                                 <include reference="EH0-Jl-Fge"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="ccL-TN-YXG"/>
-                                <include reference="vOh-u7-ik4"/>
                                 <include reference="Gaa-uF-ESf"/>
                                 <include reference="hv9-af-rmK"/>
+                                <include reference="ccL-TN-YXG"/>
+                                <include reference="vOh-u7-ik4"/>
                             </mask>
                         </variation>
                     </view>
-                    <navigationItem key="navigationItem" title="برنامج تسجيل الصوت" id="Dl0-DB-50k"/>
+                    <navigationItem key="navigationItem" title="Pitch Perfect" id="Dl0-DB-50k"/>
                     <connections>
                         <outlet property="btn_recording" destination="ij0-eL-Ddq" id="OYd-gx-fZi"/>
                         <outlet property="lbl_recording" destination="EH0-Jl-Fge" id="ge5-D0-QnF"/>
@@ -157,14 +158,14 @@
                                 <exclude reference="Jup-q8-gMV"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="0RL-3X-E2g"/>
-                                <exclude reference="QO3-sA-gGl"/>
                                 <exclude reference="QS5-FE-OKG"/>
                                 <exclude reference="WRo-aA-u2I"/>
                                 <exclude reference="QjI-mD-Urf"/>
                                 <exclude reference="uHx-Ag-U83"/>
                                 <exclude reference="KXK-sp-nDE"/>
                                 <exclude reference="ovX-ca-pYo"/>
+                                <exclude reference="0RL-3X-E2g"/>
+                                <exclude reference="QO3-sA-gGl"/>
                                 <exclude reference="MfR-hC-huc"/>
                                 <exclude reference="Wlp-1O-X3o"/>
                             </mask>
@@ -178,14 +179,14 @@
                                 <include reference="Jup-q8-gMV"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="0RL-3X-E2g"/>
-                                <include reference="QO3-sA-gGl"/>
                                 <include reference="QS5-FE-OKG"/>
                                 <include reference="WRo-aA-u2I"/>
                                 <include reference="QjI-mD-Urf"/>
                                 <include reference="uHx-Ag-U83"/>
                                 <include reference="KXK-sp-nDE"/>
                                 <include reference="ovX-ca-pYo"/>
+                                <include reference="0RL-3X-E2g"/>
+                                <include reference="QO3-sA-gGl"/>
                                 <include reference="MfR-hC-huc"/>
                                 <include reference="Wlp-1O-X3o"/>
                             </mask>
